fix: comment out overflow-x property in admin-dashboard and step2 components for layout adjustments

--- a/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.scss
@@ -12,7 +12,7 @@
   gap: 1rem;
 
   width: 100%;
-  overflow-x: auto;
+  // overflow-x: auto;
   padding: 0.5rem;
 }
 
