--- a/src/app/pages/events/create-edit-event/step2/step2.component.scss
+++ b/src/app/pages/events/create-edit-event/step2/step2.component.scss
@@ -18,7 +18,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  overflow-x: auto;
+  // overflow-x: auto;
 
   gap: 1rem;
   padding: 0.5rem 1rem;
